--- a/JavaScript/OperadorTernario/index.html
+++ b/JavaScript/OperadorTernario/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios</title>
+    <title>TERNARIO</title>
 </head>
 <body>
-    <script src="exerciciosQuatro.js"></script>
+    <script src="operadorTernario.js"></script>
+</body>
 </html>
