--- a/JavaScript/condicoes/index.html
+++ b/JavaScript/condicoes/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios</title>
+    <title>condicoes</title>
 </head>
 <body>
-    <script src="exerciciosQuatro.js"></script>
+    <script src="condicoes.js"></script>
+</body>
 </html>
